--- a/examples/integrations/observation_tools/promptfoo/promptfoo.ipynb
+++ b/examples/integrations/observation_tools/promptfoo/promptfoo.ipynb
@@ -81,69 +81,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: uptrain in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (0.6.7.post1)\n",
-      "Requirement already satisfied: pydantic in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from uptrain) (2.6.4)\n",
-      "Requirement already satisfied: pydantic-settings in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from uptrain) (2.2.1)\n",
-      "Requirement already satisfied: loguru in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from uptrain) (0.7.2)\n",
-      "Requirement already satisfied: lazy-loader in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from uptrain) (0.3)\n",
-      "Requirement already satisfied: networkx in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from uptrain) (3.2.1)\n",
-      "Requirement already satisfied: polars>=0.18 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from uptrain) (0.20.15)\n",
-      "Requirement already satisfied: pandas in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from uptrain) (2.2.1)\n",
-      "Requirement already satisfied: numpy>=1.23.0 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from uptrain) (1.26.4)\n",
-      "Requirement already satisfied: httpx>=0.24.1 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from uptrain) (0.27.0)\n",
-      "Requirement already satisfied: plotly>=5.0.0 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from uptrain) (5.20.0)\n",
-      "Requirement already satisfied: aiolimiter>=1.1 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from uptrain) (1.1.0)\n",
-      "Requirement already satisfied: openai>=1.6.1 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from uptrain) (1.14.0)\n",
-      "Requirement already satisfied: fsspec in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from uptrain) (2024.2.0)\n",
-      "Requirement already satisfied: litellm in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from uptrain) (1.31.12)\n",
-      "Requirement already satisfied: pyyaml in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from uptrain) (6.0.1)\n",
-      "Requirement already satisfied: anyio in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from httpx>=0.24.1->uptrain) (4.3.0)\n",
-      "Requirement already satisfied: certifi in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from httpx>=0.24.1->uptrain) (2024.2.2)\n",
-      "Requirement already satisfied: httpcore==1.* in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from httpx>=0.24.1->uptrain) (1.0.4)\n",
-      "Requirement already satisfied: idna in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from httpx>=0.24.1->uptrain) (3.6)\n",
-      "Requirement already satisfied: sniffio in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from httpx>=0.24.1->uptrain) (1.3.1)\n",
-      "Requirement already satisfied: h11<0.15,>=0.13 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from httpcore==1.*->httpx>=0.24.1->uptrain) (0.14.0)\n",
-      "Requirement already satisfied: distro<2,>=1.7.0 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from openai>=1.6.1->uptrain) (1.9.0)\n",
-      "Requirement already satisfied: tqdm>4 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from openai>=1.6.1->uptrain) (4.66.2)\n",
-      "Requirement already satisfied: typing-extensions<5,>=4.7 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from openai>=1.6.1->uptrain) (4.10.0)\n",
-      "Requirement already satisfied: tenacity>=6.2.0 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from plotly>=5.0.0->uptrain) (8.2.3)\n",
-      "Requirement already satisfied: packaging in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from plotly>=5.0.0->uptrain) (24.0)\n",
-      "Requirement already satisfied: annotated-types>=0.4.0 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from pydantic->uptrain) (0.6.0)\n",
-      "Requirement already satisfied: pydantic-core==2.16.3 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from pydantic->uptrain) (2.16.3)\n",
-      "Requirement already satisfied: aiohttp in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from litellm->uptrain) (3.9.3)\n",
-      "Requirement already satisfied: click in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from litellm->uptrain) (8.1.7)\n",
-      "Requirement already satisfied: importlib-metadata>=6.8.0 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from litellm->uptrain) (7.0.2)\n",
-      "Requirement already satisfied: jinja2<4.0.0,>=3.1.2 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from litellm->uptrain) (3.1.3)\n",
-      "Requirement already satisfied: python-dotenv>=0.2.0 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from litellm->uptrain) (1.0.1)\n",
-      "Requirement already satisfied: requests<3.0.0,>=2.31.0 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from litellm->uptrain) (2.31.0)\n",
-      "Requirement already satisfied: tiktoken>=0.4.0 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from litellm->uptrain) (0.6.0)\n",
-      "Requirement already satisfied: tokenizers in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from litellm->uptrain) (0.15.2)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from pandas->uptrain) (2.9.0.post0)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from pandas->uptrain) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from pandas->uptrain) (2024.1)\n",
-      "Requirement already satisfied: zipp>=0.5 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from importlib-metadata>=6.8.0->litellm->uptrain) (3.18.1)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from jinja2<4.0.0,>=3.1.2->litellm->uptrain) (2.1.5)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from python-dateutil>=2.8.2->pandas->uptrain) (1.16.0)\n",
-      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from requests<3.0.0,>=2.31.0->litellm->uptrain) (3.3.2)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from requests<3.0.0,>=2.31.0->litellm->uptrain) (2.2.1)\n",
-      "Requirement already satisfied: regex>=2022.1.18 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from tiktoken>=0.4.0->litellm->uptrain) (2023.12.25)\n",
-      "Requirement already satisfied: aiosignal>=1.1.2 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from aiohttp->litellm->uptrain) (1.3.1)\n",
-      "Requirement already satisfied: attrs>=17.3.0 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from aiohttp->litellm->uptrain) (23.2.0)\n",
-      "Requirement already satisfied: frozenlist>=1.1.1 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from aiohttp->litellm->uptrain) (1.4.1)\n",
-      "Requirement already satisfied: multidict<7.0,>=4.5 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from aiohttp->litellm->uptrain) (6.0.5)\n",
-      "Requirement already satisfied: yarl<2.0,>=1.0 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from aiohttp->litellm->uptrain) (1.9.4)\n",
-      "Requirement already satisfied: huggingface_hub<1.0,>=0.16.4 in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from tokenizers->litellm->uptrain) (0.21.4)\n",
-      "Requirement already satisfied: filelock in /Users/shreyanshjain/Documents/UpTrain/GitHub_Clone/uptrain/.venv/lib/python3.11/site-packages (from huggingface_hub<1.0,>=0.16.4->tokenizers->litellm->uptrain) (3.13.1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install uptrain"
+    "!pip install uptrain -qU"
    ]
   },
   {
