minor changes in notebook

--- a/examples/integrations/observation_tools/promptfoo/promptfoo.ipynb
+++ b/examples/integrations/observation_tools/promptfoo/promptfoo.ipynb
@@ -97,7 +97,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Import `Evals` and `EvalPromptfoo` classes from uptrain "
+    "Import `Evals` and `EvalPromptfoo` classes from uptrain\n",
+    "\n",
+    "Then set your Open AI key (used to generate responses on the 2 OpenAI models we are using and for UpTrain evaluations)"
    ]
   },
   {
@@ -106,7 +108,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from uptrain import Evals, EvalPromptfoo"
+    "from uptrain import Evals, EvalPromptfoo\n",
+    "import os\n",
+    "\n",
+    "os.environ[\"OPENAI_API_KEY\"] = \"sk-***********\""
    ]
   },
   {
