minor edits in notebook

--- a/examples/integrations/observation_tools/promptfoo/promptfoo.ipynb
+++ b/examples/integrations/observation_tools/promptfoo/promptfoo.ipynb
@@ -29,6 +29,7 @@
     "**UpTrain** [ [website](https://uptrain.ai/) | [github](https://github.com/uptrain-ai/uptrain) | [docs](https://docs.uptrain.ai/getting-started/introduction) ] \n",
     "\n",
     "UpTrain is an open-source tool to evaluate LLM generated responses. \n",
+    "\n",
     "Using UpTrain you can:\n",
     "1. Evaluate LLM generated responses over 20+ preconfigured checks (covering language, code, embedding use cases)\n",
     "2. Perform root cause analyses on instances of failure cases\n",
@@ -37,13 +38,14 @@
     "\n",
     "\n",
     "**Promptfoo** [ [website](https://promptfoo.dev/) | [github](https://github.com/promptfoo/promptfoo) | [docs](https://promptfoo.dev/docs/intro) ] \n",
+    "\n",
     "Promptfoo is an LLM observability tool that helps observe your LLM experiments. \n",
     "\n",
     "Using Promptfoo you can:\n",
     "1. compare prompts and model outputs side-by-side\n",
     "2. integrate the library into your existing test/CI workflow.\n",
     "\n",
-    "and a lot more"
+    "and a lot more..."
    ]
   },
   {
