--- a/examples/checks/custom/custom_prompt_evals.ipynb
+++ b/examples/checks/custom/custom_prompt_evals.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a href=\"https://colab.research.google.com/github/uptrain-ai/uptrain/blob/main/examples/checks/custom/writing_custom_evals.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+    "<a href=\"https://colab.research.google.com/github/uptrain-ai/uptrain/blob/main/examples/checks/custom/custom_prompt_evals.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
    ]
   },
   {
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h1 style=\"text-align: center;\">Building Custom Evaluations using UpTrain</h1>"
+    "<h1 style=\"text-align: center;\">Building Custom Prompt Evaluations using UpTrain</h1>"
    ]
   },
   {
@@ -31,7 +31,7 @@
    "source": [
     "Each LLM application has its unique needs and it is not possible to have a one-size-fits-all evaluation tool. A sales assistant bot needs to be evaluated differently as compared to a calendar automation bot. Even if both the LLM applications want to evaluate for conciseness, the developers need the capability to customize the evaluation prompt to focus on different aspects, most importantly for their end users.\n",
     "\n",
-    "To accommodate such cases, UpTrain allows developers to create a custom evaluation by defining:\n",
+    "To accommodate such cases, UpTrain allows developers to create a custom prompt evaluation by defining:\n",
     "\n",
     "| Column Name | Description |\n",
     "| ----------- | ----------- |\n",
