--- a/examples/checks/custom/custom_evals.ipynb
+++ b/examples/checks/custom/custom_evals.ipynb
@@ -226,7 +226,7 @@
     "eval_llm = EvalLLM(openai_api_key=OPENAI_API_KEY)\n",
     "\n",
     "results = eval_llm.evaluate(\n",
-    "    project_name = 'UpTrain Demo',\n",
+    "    project_name = 'UpTrain',\n",
     "    data=data,\n",
     "    checks=[\n",
     "        DiverseVocabularyEval(col_in_text=\"response\"),\n",
@@ -344,7 +344,7 @@
     "eval_llm = EvalLLM(openai_api_key=OPENAI_API_KEY)\n",
     "\n",
     "results = eval_llm.evaluate(\n",
-    "    project_name = 'UpTrain Demo',\n",
+    "    project_name = 'UpTrain',\n",
     "    data=data,\n",
     "    checks=[\n",
     "        WordCount(col_in_text = \"response\"),\n",
