--- a/docs/predefined-evaluations/custom-evals/custom-eval.mdx
+++ b/docs/predefined-evaluations/custom-evals/custom-eval.mdx
@@ -131,6 +131,8 @@ This Dashboard is a part of UpTrain's open-source offering and runs locally on y
 
 Check out this [documentation](https://docs.uptrain.ai/dashboard/getting_started) to get started with UpTrain Dashboard
 
+![image](https://github.com/uptrain-ai/uptrain/assets/43818888/5e788e81-8c46-48f7-8a77-5b08444418c5)
+
 ### Bonus
 
 We have already defined some prebuilt evaluations that you can use without the hassle of writing the code for them
