--- a/examples/checks/custom/custom_evals.ipynb
+++ b/examples/checks/custom/custom_evals.ipynb
@@ -82,7 +82,7 @@
    "outputs": [],
    "source": [
     "from uptrain.framework.base import Settings\n",
-    "from uptrain.operators.base import TransformOp, register_custom_op, TYPE_TABLE_OUTPUT\n",
+    "from uptrain.operators.base import ColumnOp, register_custom_op, TYPE_TABLE_OUTPUT\n",
     "import polars as pl"
    ]
   },
@@ -107,7 +107,7 @@
    "outputs": [],
    "source": [
     "@register_custom_op\n",
-    "class DiverseVocabularyEval(TransformOp):\n",
+    "class DiverseVocabularyEval(ColumnOp):\n",
     "    \n",
     "    col_in_text: str = \"response\"\n",
     "    col_out_score: str = \"score_diverse_vocabulary\"\n",
@@ -134,7 +134,7 @@
    "outputs": [],
    "source": [
     "@register_custom_op\n",
-    "class AverageWordLengthEval(TransformOp):\n",
+    "class AverageWordLengthEval(ColumnOp):\n",
     "    col_in_text: str = \"response\"\n",
     "    col_out_score: str = \"score_average_word_length\"\n",
     "\n",
@@ -195,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from uptrain import EvalLLM, Settings\n",
+    "from uptrain import EvalLLM\n",
     "import os"
    ]
   },
