--- a/docs/integrations/framework/llamaindex-methods/callback_handler/overview.mdx
+++ b/docs/integrations/framework/llamaindex-methods/callback_handler/overview.mdx
@@ -1,5 +1,5 @@
 ---
-title: Callback Handler Overview
+title: Overview
 ---
 
 Three additional evaluations for Llamaindex have been introduced, complementing existing ones. These evaluations run automatically, with results displayed in the output. More details on UpTrain’s evaluations can be found here.
@@ -13,18 +13,16 @@ Selected operators from the LlamaIndex pipeline are highlighted for demonstratio
     * [Response Completeness](/predefined-evaluations/response-quality/response-completeness): Checks if the response contains all the information requested by the query.
 <Info>You can check out the complete list of evaluations UpTrain supports [here](/predefined-evaluations/overview) </Info>
 
-2. **Sub-Question Query Generation Evaluation:**
+2. **[Sub-Question Query Generation Evaluation](/integrations/framework/llamaindex-methods/callback_handler):**
   The SubQuestionQueryGeneration operator decomposes a question into sub-questions, generating responses for each using a RAG query engine. Given the complexity, we include the previous evaluations and add:
-    * Sub Query Completeness: Assures that the sub-questions accurately and comprehensively cover the original query.
+    * [Sub Query Completeness](/predefined-evaluations/query-quality/sub-query-completeness): Assures that the sub-questions accurately and comprehensively cover the original query.
 
-3. **Re-Ranking Evaluations:**
+3. **[Re-Ranking Evaluations](/integrations/framework/llamaindex-methods/callback_handler/rag_query):**
   Re-ranking involves reordering nodes based on relevance to the query and choosing top n nodes. Different evaluations are performed based on the number of nodes returned after re-ranking.
-    1. Same Number of Nodes
-    Context Reranking: Checks if the order of re-ranked nodes is more relevant to the query than the original order.
-    2. Different Number of Nodes:
-    Context Conciseness: Examines whether the reduced number of nodes still provides all the required information.
+    * [Context Reranking](/predefined-evaluations/context-awareness/context-reranking) (For same number of nodes): Checks if the order of re-ranked nodes is more relevant to the query than the original order.
+    * [Context Conciseness](/predefined-evaluations/context-awareness/context-conciseness) (For different number of nodes): Examines whether the reduced number of nodes still provides all the required information.
   
-These evaluations collectively ensure the robustness and effectiveness of the RAG query engine, SubQuestionQueryGeneration operator, and the re-ranking process in the LlamaIndex pipeline.
+These evaluations collectively ensure the robustness and effectiveness of the RAG query engine, [SubQuestionQueryGeneration](https://docs.llamaindex.ai/en/stable/examples/query_engine/sub_question_query_engine.html) operator, and the re-ranking process in the LlamaIndex pipeline.
 <Note>
 We have performed evaluations using basic RAG query engine, the same evaluations can be performed using the advanced RAG query engine as well.
 
