--- a/examples/checks/custom/custom_evals.ipynb
+++ b/examples/checks/custom/custom_evals.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,13 +208,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "OPENAI_API_KEY = os.environ.get(\"OPENAI_API_KEY\")\n",
-    "\n",
-    "eval_llm = EvalLLM(openai_api_key=OPENAI_API_KEY)\n",
+    "eval_llm = EvalLLM(Settings())\n",
     "\n",
     "results = eval_llm.evaluate(\n",
     "    project_name = 'UpTrain',\n",
@@ -235,9 +233,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'question': 'What are the primary components of a cell?',\n",
+       "  'response': 'A cell comprises a cell membrane, cytoplasm, and nucleus. The cell membrane regulates substance passage, the cytoplasm contains organelles, and the nucleus houses genetic material.',\n",
+       "  'score_diverse_vocabulary': 0.84,\n",
+       "  'score_average_word_length': 6.24},\n",
+       " {'question': 'How does photosynthesis work?',\n",
+       "  'response': 'Photosynthesis converts light energy into chemical energy in plants, algae, and some bacteria. Chlorophyll absorbs sunlight, synthesizing glucose from carbon dioxide and water, with oxygen released as a byproduct.',\n",
+       "  'score_diverse_vocabulary': 0.93,\n",
+       "  'score_average_word_length': 6.38},\n",
+       " {'question': 'What are the key features of the Python programming language?',\n",
+       "  'response': 'Python is a high-level, interpreted language known for readability. It supports object-oriented, imperative, and functional programming with a large standard library, dynamic typing, and automatic memory management.',\n",
+       "  'score_diverse_vocabulary': 0.93,\n",
+       "  'score_average_word_length': 7.0}]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results"
    ]
@@ -290,18 +310,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m2024-03-21 16:36:59.739\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36muptrain.framework.base\u001b[0m:\u001b[36mrun\u001b[0m:\u001b[36m217\u001b[0m - \u001b[34m\u001b[1mExecuting node: operator_0 for operator DAG: dummy\u001b[0m\n",
+      "\u001b[32m2024-03-21 16:36:59.740\u001b[0m | \u001b[34m\u001b[1mDEBUG   \u001b[0m | \u001b[36muptrain.framework.base\u001b[0m:\u001b[36mrun\u001b[0m:\u001b[36m217\u001b[0m - \u001b[34m\u001b[1mExecuting node: operator_0 for operator DAG: dummy\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "from uptrain.operators.language.text import WordCount\n",
     "from uptrain.operators.language.text import KeywordDetector\n",
-    "from uptrain import EvalLLM\n",
+    "from uptrain import EvalLLM, Settings\n",
     "\n",
-    "OPENAI_API_KEY = os.environ.get(\"OPENAI_API_KEY\")\n",
-    "\n",
-    "\n",
-    "eval_llm = EvalLLM(openai_api_key=OPENAI_API_KEY)\n",
+    "eval_llm = EvalLLM(Settings())\n",
     "\n",
     "results = eval_llm.evaluate(\n",
     "    project_name = 'UpTrain',\n",
@@ -315,9 +341,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'question': 'What are the primary components of a cell?',\n",
+       "  'response': 'A cell comprises a cell membrane, cytoplasm, and nucleus. The cell membrane regulates substance passage, the cytoplasm contains organelles, and the nucleus houses genetic material.',\n",
+       "  'word_count': 25,\n",
+       "  'keyword_detector': False},\n",
+       " {'question': 'How does photosynthesis work?',\n",
+       "  'response': 'Photosynthesis converts light energy into chemical energy in plants, algae, and some bacteria. Chlorophyll absorbs sunlight, synthesizing glucose from carbon dioxide and water, with oxygen released as a byproduct.',\n",
+       "  'word_count': 29,\n",
+       "  'keyword_detector': False},\n",
+       " {'question': 'What are the key features of the Python programming language?',\n",
+       "  'response': 'Python is a high-level, interpreted language known for readability. It supports object-oriented, imperative, and functional programming with a large standard library, dynamic typing, and automatic memory management.',\n",
+       "  'word_count': 27,\n",
+       "  'keyword_detector': True}]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results"
    ]
