Fix import in docs

--- a/docs/predefined-evaluations/custom-evals/custom-eval.mdx
+++ b/docs/predefined-evaluations/custom-evals/custom-eval.mdx
@@ -34,7 +34,7 @@ First, let's import the required dependencies
 
 ```python
 from uptrain.framework.base import Settings
-from uptrain.operators.base import TransformOp, register_custom_op, TYPE_TABLE_OUTPUT
+from uptrain.operators.base import ColumnOp, register_custom_op, TYPE_TABLE_OUTPUT
 import polars as pl
 ```
 
