--- a/docs/predefined-evaluations/custom-evals/custom-eval.mdx
+++ b/docs/predefined-evaluations/custom-evals/custom-eval.mdx
@@ -33,7 +33,7 @@ We will use UpTrain to check for these custom evaluations over the following cas
 First, let's import the required dependencies
 
 ```python
-from uptrain.framework.base import Settings
+from uptrain import EvalLLM, Settings
 from uptrain.operators.base import ColumnOp, register_custom_op, TYPE_TABLE_OUTPUT
 import polars as pl
 ```
@@ -95,13 +95,6 @@ data = [
 ]
 ```
 
-First, let's import the required dependencies
-
-
-```python
-from uptrain import EvalLLM, Settings
-import os
-```
 
 All done! Now let's run these evaluations
 
@@ -144,9 +137,7 @@ We have already defined some prebuilt evaluations that you can use without the h
 
 
 ```python
-from uptrain.operators.language.text import WordCount
-from uptrain.operators.language.text import KeywordDetector
-from uptrain import EvalLLM
+from uptrain.operators.language.text import WordCount, KeywordDetector
 
 eval_llm = EvalLLM(Settings())
 
