--- a/examples/checks/custom/custom_evals.ipynb
+++ b/examples/checks/custom/custom_evals.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install uptrain"
+    "%pip install uptrain"
    ]
   },
   {
@@ -81,7 +81,7 @@
    },
    "outputs": [],
    "source": [
-    "from uptrain.framework.base import Settings\n",
+    "from uptrain import EvalLLM, Settings\n",
     "from uptrain.operators.base import ColumnOp, register_custom_op, TYPE_TABLE_OUTPUT\n",
     "import polars as pl"
    ]
@@ -180,23 +180,6 @@
     "        \"response\": \"Python is a high-level, interpreted language known for readability. It supports object-oriented, imperative, and functional programming with a large standard library, dynamic typing, and automatic memory management.\"\n",
     "    }\n",
     "]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First, let's import the required dependencies"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from uptrain import EvalLLM\n",
-    "import os"
    ]
   },
   {
@@ -323,9 +306,7 @@
     }
    ],
    "source": [
-    "from uptrain.operators.language.text import WordCount\n",
-    "from uptrain.operators.language.text import KeywordDetector\n",
-    "from uptrain import EvalLLM, Settings\n",
+    "from uptrain.operators.language.text import WordCount, KeywordDetector\n",
     "\n",
     "eval_llm = EvalLLM(Settings())\n",
     "\n",
