Updated dashboard positioning in docs

--- a/docs/getting-started/dashboard/project.mdx
+++ b/docs/getting-started/dashboard/project.mdx
@@ -7,8 +7,8 @@ title: Create a Project
 Using UpTrain Dashboard you can manage all your projects.
 
 There are 2 types of projects we support:
-  * **[Evaluations](/dashboard/evaluations):** Run evaluations on your queries, documents and LLM responses
-  * **[Prompts](/dashboard/prompts):** Find the best way to ask questions to your LLM using prompt iteration, experimentation and evaluations
+  * **[Evaluations](/getting-started/dashboard/evaluations):** Run evaluations on your queries, documents and LLM responses
+  * **[Prompts](/getting-started/dashboard/prompts):** Find the best way to ask questions to your LLM using prompt iteration, experimentation and evaluations
 
 ### How does it work?
 
