--- a/docs/getting-started/introduction.mdx
+++ b/docs/getting-started/introduction.mdx
@@ -25,6 +25,22 @@ We provide scores for 20+ pre-configured evals (and have 40+ operators to help c
     20+ pre-configured checks
   </Card>
   <Card
+    title="Dashboards"
+    href="/getting-started/dashboard"
+    icon="monitor-waveform"
+    color="#0ac7ad"
+    >
+    Visualize results using UpTrain's locally run dashboards
+  </Card>
+  <Card
+    title="RAG Failure Analysis"
+    href="/tutorials/analyzing-failure-cases"
+    icon="wrench"
+    color="#808080"
+    >
+    Automatically get failure cases on your RAG Pipeline
+  </Card>
+  <Card
     title="Tutorials"
     href="/tutorials/open-source-evaluator"
     icon="terminal"
