--- a/examples/experiments/compare_embedding_models.ipynb
+++ b/examples/experiments/compare_embedding_models.ipynb
@@ -155,7 +155,7 @@
       "outputs": [],
       "source": [
         "settings = Settings(\n",
-        "    uptrain_access_token=\"up-cf16f604d06b42f282d76bc46f448b9e\"\n",
+        "    uptrain_access_token=\"up-*******************\"\n",
         ")\n",
         "\n",
         "eval_client = APIClient(settings = settings)"
