--- a/docs/predefined-evaluations/query-quality/sub-query-completeness.mdx
+++ b/docs/predefined-evaluations/query-quality/sub-query-completeness.mdx
@@ -7,7 +7,7 @@ Sub-Query Completeness checks whether the sub-queries generated from a question 
 
 Columns required:
 - `question`: The question asked by the user
-- `sub_question`: Sub questions generated from the question
+- `sub_questions`: Sub questions generated from the question
 
 ### How to use it?
 
@@ -17,10 +17,10 @@ from uptrain import EvalLLM, Evals
 OPENAI_API_KEY = "sk-********************"  # Insert your OpenAI key here
 
 data = [
-    {
-        'question': 'What is the Taj Mahal? When was it built, where and by whom',
-        'sub_questions': '1. What is the Taj Mahal? '        
-    }
+  {
+    'question': 'What is the Taj Mahal? When was it built, where and by whom?',
+    'sub_questions': '1. What is the Taj Mahal? 2. When was the Taj Mahal built? 3. Where is the Taj Mahal? 4. Who built the Taj Mahal?'        
+  }
 ]
 
 eval_llm = EvalLLM(openai_api_key=OPENAI_API_KEY)
@@ -35,15 +35,17 @@ res = eval_llm.evaluate(
 Sample Response:
 ```json
 [
-   {
-      "score_sub_query_completeness": 0.0,
-      "explanation_sub_query_completeness": "Step by step reasoning:\n\n1. The main question is \"What is the Taj Mahal? When was it built, where and by whom.\"\n2. The sub-question provided is \"What is the Taj Mahal?\"\n3. The sub-question does not cover the aspects of when it was built, where, and by whom.\n4. The sub-question collectively does not cover any aspects of the main question.\n\n[Choice]: (C) Sub Questions collectively does not cover any aspects of the main question.\n[Explanation]: The sub-question provided collectively does not cover any aspects of the main question."
-   }
+  {
+    "question": "What is the Taj Mahal? When was it built, where and by whom?",
+    "sub_questions": "1. What is the Taj Mahal? 2. When was the Taj Mahal built? 3. Where is the Taj Mahal? 4. Who built the Taj Mahal?",
+    "score_sub_query_completeness": 1.0,
+    "explanation_sub_query_completeness": "Step by step reasoning:\n\n1. What is the Taj Mahal? - This sub-question covers the aspect of understanding what the Taj Mahal is, providing information about its nature and purpose.\n2. When was the Taj Mahal built? - This sub-question covers the aspect of the time of construction, addressing the historical timeline of the Taj Mahal's creation.\n3. Where is the Taj Mahal? - This sub-question covers the aspect of location, providing information about the geographical placement of the Taj Mahal.\n4. Who built the Taj Mahal? - This sub-question covers the aspect of the creator, addressing the individuals or entities responsible for the construction of the Taj Mahal.\n\nConclusion:\nThe sub-questions collectively cover all the aspects of the main question.\n\n[Choice]: (A) Sub Questions collectively all the aspects of the main question."
+  }
 ]
 ```
 <Note>A higher Sub-Query Completeness score reflects that the generated sub-questions cover all aspects of the question asked.</Note>
 
-The `sub_question` does not contain some parts of the `question` such as: "When was the Taj Mahal?", "Who built the Taj Mahal?", "Where is the the Taj Mahal?"
+The `sub_questions` do not contain some parts of the `question` such as: "When was the Taj Mahal?", "Who built the Taj Mahal?", "Where is the the Taj Mahal?"
 
 Resulting in low Sub-Query Completeness score.
 
@@ -59,7 +61,7 @@ We evaluate Sub-Query Completeness by determining which of the following three c
 <CardGroup cols={2}>
   <Card
     title="Tutorial"
-    href="https://github.com/uptrain-ai/uptrain/blob/main/examples/checks/sub_query/sub_query_completeness.ipynb"
+    href="https://github.com/uptrain-ai/uptrain/blob/main/examples/checks/query_quality/sub_query_completeness.ipynb"
     icon="github"
     color="#808080"
   >
