minor changes in readme

--- a/docs/predefined-evaluations/overview.mdx
+++ b/docs/predefined-evaluations/overview.mdx
@@ -60,6 +60,7 @@ You can choose evals as per your needs. We have divided them into a few categori
 | Eval | Description |
 | ---- | ----------- |
 |[Sub-query Completeness](/predefined-evaluations/query-quality/sub-query-completeness) | Evaluate if the list of generated sub-questions comprehensively cover all aspects of the main question. |
+|[Multi-query Accuracy](/predefined-evaluations/query-quality/multi-query-accuracy) | Evaluates how accurately the variations of the query represent the same question. |
   </Accordion>
 
   <Accordion title="Code Related Evals">
