Change APIClient to EvalLLM

--- a/examples/experiments/embedding_models_comparison.ipynb
+++ b/examples/experiments/embedding_models_comparison.ipynb
@@ -77,7 +77,7 @@
         "import polars as pl\n",
         "\n",
         "from uptrain.operators import VectorSearch\n",
-        "from uptrain import Settings, APIClient, Evals"
+        "from uptrain import Settings, EvalLLM, Evals"
       ]
     },
     {
@@ -90,10 +90,10 @@
       "outputs": [],
       "source": [
         "settings = Settings(\n",
-        "    uptrain_access_token=\"up-*******************\"\n",
+        "    openai_api_key=\"sk-*******************\"\n",
         ")\n",
         "\n",
-        "eval_client = APIClient(settings = settings)"
+        "eval_llm = EvalLLM(settings = settings)"
       ]
     },
     {
@@ -482,13 +482,21 @@
         }
       ],
       "source": [
-        "results = eval_client.evaluate_experiments(\n",
+        "results = eval_llm.evaluate_experiments(\n",
         "    experiment_name,\n",
         "    data = top_k_documents,\n",
         "    checks = [Evals.CONTEXT_RELEVANCE],\n",
         "    exp_columns = ['embedding_model'],\n",
         "    metadata = {\"uptrain_index_columns\": ['question', 'retrieval_rank']}\n",
         ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "38809f4b",
+      "metadata": {},
+      "source": [
+        "## View the results"
       ]
     },
     {
