--- a/docs/predefined-evaluations/context-awareness/context-conciseness.mdx
+++ b/docs/predefined-evaluations/context-awareness/context-conciseness.mdx
@@ -31,7 +31,7 @@ eval_llm = EvalLLM(openai_api_key=OPENAI_API_KEY)
 
 res = eval_llm.evaluate(
     data = data,
-    checks = [Evals.CONTEXT_RERANKING]
+    checks = [Evals.CONTEXT_CONCISENESS]
 )
 ```
 <Info>By default, we are using GPT 3.5 Turbo for evaluations. If you want to use a different model, check out this [tutorial](https://github.com/uptrain-ai/uptrain/blob/main/examples/open_source_evaluator_tutorial.ipynb).</Info>
